<?xml version="1.0"?>
<package format="3">
  <name>pal_sea_arm_mujoco</name>
  <version>1.1.2</version>
  <description>The pal_sea_arm_mujoco package</description>

  <maintainer email="narcis.miguel@pal-robotics.com">Narcis Miguel</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>pal_sea_arm_description</exec_depend>
  <exec_depend>pal_urdf_utils</exec_depend>
  <exec_depend>pal_sea_arm_bringup</exec_depend>
  <exec_depend>pal_sea_arm_moveit_config</exec_depend>
  <exec_depend>pal_pro_gripper_description</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
