<?xml version="1.0"?>
<package format="3">
  <name>pal_sea_arm_simulation</name>
  <version>1.0.4</version>
  <description>The pal_sea_arm_simulation package</description>

  <maintainer email="narcis.miguel@pal-robotics.com">Narcis Miguel</maintainer>
  <maintainer email="ilenia.perrella@pal-robotics.com">Ilenia Perrella</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>pal_sea_arm_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
